quick fix on mobile version

--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -2,6 +2,13 @@
     display: none; /* Hidden by default on desktop */
 }
 
+.mobile-about-popup,
+.mobile-about,
+.about-toggle,
+.about-content {
+    display: none; /* Hidden by default */
+}
+
 @media screen and (max-width: 768px) {
     body, main {
         margin: 0;
@@ -116,6 +123,13 @@
 
     #toggleFilters.hidden {
         right: 0; /* Move to edge of screen when hidden */
+    }
+
+    .mobile-about,
+    .about-toggle,
+    .about-content,
+    .mobile-about-popup {
+        display: flex; /* Show only on mobile */
     }
 
     .mobile-about {
